try set the right directory

--- a/game/monopoly/public/monopoly/game.html
+++ b/game/monopoly/public/monopoly/game.html
@@ -2,13 +2,13 @@
 
 <head>
     <title>Login Here</title>
-    <link rel="stylesheet" href="./css/bootstrap.min.css" >
-    <link rel="stylesheet" href="./css/jquery-ui.css">
-    <link rel="stylesheet" href="./css/style.css">
-    <script src=./js/jquery-1.12.4.js"></script>
-    <script src="./js/jquery-ui.js"></script>
+    <link rel="stylesheet" href="/css/bootstrap.min.css" >
+    <link rel="stylesheet" href="/css/jquery-ui.css">
+    <link rel="stylesheet" href="/css/style.css">
+    <script src=/js/jquery-1.12.4.js"></script>
+    <script src="/js/jquery-ui.js"></script>
     
-    <script type="text/javascript" src="./js/YConsole-compiled.js"></script>
+    <script type="text/javascript" src="/js/YConsole-compiled.js"></script>
     <script type="text/javascript">
            YConsole.activate();
            console.log("first intercepted log.");
@@ -17,7 +17,7 @@
            YConsole.docking="bottom";
            YConsole.show();
     </script>
-    <script type="application/javascript" src="./monopoly/pole.js"></script>
+    <script type="application/javascript" src="/monopoly/pole.js"></script>
 </head>
 
 <body class="container">
